--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -16,35 +16,35 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-	display: block;
+    display: block;
 }
 body {
-	line-height: 1;
+    line-height: 1;
 }
 ol, ul {
-	list-style: none;
+    list-style: none;
 }
 blockquote, q {
-	quotes: none;
+    quotes: none;
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-	content: '';
-	content: none;
+    content: '';
+    content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 body {
@@ -54,9 +54,61 @@ body {
     background: url('../images/dvsup.png');
     width: 800px;
     margin: 1em auto;
+    text-shadow: #000 1px 1px 1px;
+    position: relative;
 }
 
 h1 {
     font-size: 28px;
     margin-bottom: .7em;
 }
+
+a {
+    color: #fff;
+}
+
+.facebook-login {
+    display: block;
+    margin: 1em auto;
+    background: url('../images/facebook.png') 0 0 no-repeat;
+    width: 276px;
+    height: 58px;
+    text-indent: -9999px;
+}
+
+.facebook-logout {
+    position: relative;
+    top: -1px;
+    margin-left: 1em;
+}
+
+.account-info {
+    font-size: 12px;
+    color: #aaa;
+    position: absolute;
+    top: 10px;
+    right: 0px;
+}
+
+.account-info em {
+    color: #fff;
+}
+
+.button, .button:visited {
+    background: #222;
+    font-size: 12px;
+    display: inline-block;
+    padding: 5px 10px 6px;
+    color: #fff;
+    text-decoration: none;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+    -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+    text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
+    border-bottom: 1px solid rgba(0,0,0,0.25);
+    position: relative;
+    cursor: pointer;
+}
+.button:hover  { background-color: #333; color: #fff; }
+.button:active { top: 1px; }
