--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -47,24 +47,43 @@ table {
     border-spacing: 0;
 }
 
+html {
+    background-color: #ba742a;
+}
+
 body {
     color: #ccc;
     font-family: Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
-    background: url('../images/dvsup.png');
-    width: 800px;
-    margin: 1em auto;
+    background: #222 url('../images/dvsup.png');
     text-shadow: #000 1px 1px 1px;
+    position: absolute;
+    top: 5px;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding-top: 20px;
+}
+
+.inner {
+    margin: 0 auto;
+    width: 800px;
     position: relative;
 }
 
 h1 {
     font-size: 28px;
-    margin-bottom: .7em;
+    margin-bottom: 10px;
+    text-indent: -9999px;
+    display: block;
+    height: 29px;
+    width: 155px;
+    background: url('../images/uglylogo.png') no-repeat;
 }
 
 a {
     color: #fff;
+    cursor: pointer;
 }
 
 .facebook-login {
@@ -85,9 +104,9 @@ a {
 .account-info {
     font-size: 12px;
     color: #aaa;
-    position: absolute;
-    top: 10px;
-    right: 0px;
+    float: right;
+    position: relative;
+    margin: -30px 0 0 0;
 }
 
 .account-info em {
